<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GoEuroSearchForm">

    <TextView
        android:id="@+id/titleSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="40dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:background="@color/blueGoEuroDark" />

    <TextView
        android:id="@+id/lblFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromLabel"
        android:layout_below="@+id/titleSearch"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="9dp"
        android:textSize="20dp"
        android:textColor="@color/blueGoEuroDark" />

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvFrom"
        android:drawableLeft="@drawable/ic_action_place"
        android:drawablePadding="15dp"
        android:layout_below="@+id/lblFrom"
        android:layout_alignParentEnd="true"
        android:textColor="@color/blueGoEuroDark"
        android:textColorHint="@color/blueGoEuroLight"
        android:background="@drawable/textview_border"/>

    <TextView
        android:id="@+id/lblTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLabel"
        android:layout_below="@+id/tvFrom"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="9dp"
        android:textSize="20dp"
        android:textColor="@color/blueGoEuroDark" />

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvTo"
        android:drawableLeft="@drawable/ic_action_place"
        android:drawablePadding="15dp"
        android:layout_below="@+id/lblTo"
        android:layout_alignParentEnd="true"
        android:textColor="@color/blueGoEuroDark"
        android:textColorHint="@color/blueGoEuroLight"
        android:background="@drawable/textview_border" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButtonLabel"
        android:id="@+id/searchButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:background="@drawable/click_selector"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/lblWhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whenLabel"
        android:layout_below="@+id/tvTo"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="9dp"
        android:textSize="20dp"
        android:textColor="@color/blueGoEuroDark" />

    <LinearLayout
        android:id="@+id/dateChooser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblWhen"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/click_selector">

        <TextView
            android:id="@+id/dateDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="02"
            android:textSize="30dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_margin="6dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_action_event" />


        <TextView
            android:id="@+id/dateMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apr"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_margin="3dp" />

        <TextView
            android:id="@+id/dateYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_margin="3dp" />


    </LinearLayout>
</RelativeLayout>

